# ImageSorter

./: .gitignore  CMakeLists.txt  README.md
headers/: gui_window_file_dialog.h  lumin.hpp
sources/: main.cpp
